# Hunyuan3D-2

./: .gitignore  api_server.py  build_extensions.ps1  gradio_app.py  pyproject.toml  test_api.py
hy3dgen/: text2image.py
hy3dgen/shapegen/models/autoencoders/: volume_decoders.py
hy3dgen/texgen/custom_rasterizer/: setup.py
